--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,9 @@ cmake_minimum_required(VERSION 3.24)
 
 project(CPP_Satellite)
 
-add_executable(YourExecutableName)
-target_sources(YourExecutableName PRIVATE src/main.cpp)
+add_executable(Starlink)
+target_sources(Starlink PRIVATE src/starlink.cpp)
 
 
+add_executable(Kuiper)
+target_sources(Kuiper PRIVATE src/kuiper.cpp)
